Fixed depths UI align

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -3738,7 +3738,7 @@ canvas#webgl {
 			grid-template-columns: min-content min-content;
 			gap: 3px;
 			align-items: center;
-			justify-content: center;
+			justify-content: flex-start;
 			border-radius: 4px;
 			padding-left: 4px;
 			padding-right: 4px;
@@ -3766,6 +3766,8 @@ canvas#webgl {
 				color: $bgLight;
 				padding: 0px 4px;
 				border-radius: 4px;
+				min-width: 1em;
+				text-align: center;
 			}
 
 			&.active {
